outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_10-50-30/evaluations/problem_eval-7705890394276297216_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate proximity, global alignment, and centrality based on the remaining path length, using a sigmoid function to smooth transitions between these factors. It also introduces a penalty for nodes that are outliers in terms of distance to the destination.}
                                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate proximity, global alignment, and centrality based on the remaining path length, using a sigmoid function to smooth transitions between these factors. It also introduces a penalty for nodes that are outliers in terms of distance to the destination.}
                                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'
